--- a/app/src/main/res/layout/fragment_service_random_users.xml
+++ b/app/src/main/res/layout/fragment_service_random_users.xml
@@ -7,19 +7,30 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/button_action_save"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_user_save"
+        app:layout_constraintBottom_toBottomOf="@+id/button_action_next"
+        app:layout_constraintEnd_toStartOf="@+id/button_action_next"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/button_action_next" />
+
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-        android:id="@+id/button_action"
+        android:id="@+id/button_action_next"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="32dp"
-        android:text="Next"
+        android:text="@string/action_user_next"
         app:icon="@drawable/ic_next_user"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/button_action_save"
         app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
     <com.google.android.material.card.MaterialCardView
@@ -29,12 +40,13 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        app:cardCornerRadius="16sp"
-        app:cardElevation="6dp"
+        android:layout_marginBottom="56dp"
         android:clickable="true"
         android:focusable="true"
         android:scrollbars="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/button_action"
+        app:cardCornerRadius="16sp"
+        app:cardElevation="6dp"
+        app:layout_constraintBottom_toTopOf="@+id/button_action_next"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
