--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -20,7 +20,7 @@
         android:layout_width="72dp"
         android:layout_height="72dp"
         android:layout_marginTop="32dp"
-        android:contentDescription="@string/nav_header_desc"
+        android:contentDescription="@string/content_description_user"
         app:shapeAppearanceOverlay="@style/CircularShapeAppearance"
         app:srcCompat="@mipmap/ic_launcher_round" />
 
